@@ -62,9 +62,9 @@ import java.util.function.BiFunction;
  * Example of creating a basic synchronous server: <pre>{@code
  * McpServer.sync(transportProvider)
  *     .serverInfo("my-server", "1.0.0")
- *     .toolCall(Tool.builder("calculator", schema).title("Performs calculations").build(),
+ *     .toolCall(Tool.builder().name("calculator").title("Performs calculations").inputSchema(schema).build(),
  *           (exchange, request) -> CallToolResult.builder()
- *                   .content(Collections.singletonList(McpSchema.TextContent.builder("Result: " + calculate(request.arguments())).build()))
+ *                   .content(List.of(new McpSchema.TextContent("Result: " + calculate(request.arguments()))))
  *                   .isError(false)
  *                   .build())
  *     .build();
@@ -73,10 +73,10 @@ import java.util.function.BiFunction;
  * Example of creating a basic asynchronous server: <pre>{@code
  * McpServer.async(transportProvider)
  *     .serverInfo("my-server", "1.0.0")
- *     .toolCall(Tool.builder("calculator", schema).title("Performs calculations").build(),
+ *     .toolCall(Tool.builder().name("calculator").title("Performs calculations").inputSchema(schema).build(),
  *           (exchange, request) -> Mono.fromSupplier(() -> calculate(request.arguments()))
  *               .map(result -> CallToolResult.builder()
- *                   .content(Collections.singletonList(McpSchema.TextContent.builder("Result: " + result).build()))
+ *                   .content(List.of(new McpSchema.TextContent("Result: " + result)))
  *                   .isError(false)
  *                   .build()))
  *     .build();
@@ -93,7 +93,7 @@ import java.util.function.BiFunction;
  * 			.tool(calculatorTool)
  *   	    .callTool((exchange, args) -> Mono.fromSupplier(() -> calculate(args.arguments()))
  *                 .map(result -> CallToolResult.builder()
- *                   .content(Collections.singletonList(McpSchema.TextContent.builder("Result: " + result).build()))
+ *                   .content(List.of(new McpSchema.TextContent("Result: " + result)))
  *                   .isError(false)
  *                   .build()))
  *.         .build(),
@@ -101,7 +101,7 @@ import java.util.function.BiFunction;
  * 	        .tool((weatherTool)
  *          .callTool((exchange, args) -> Mono.fromSupplier(() -> getWeather(args.arguments()))
  *                 .map(result -> CallToolResult.builder()
- *                   .content(Collections.singletonList(McpSchema.TextContent.builder("Weather: " + result).build()))
+ *                   .content(List.of(new McpSchema.TextContent("Weather: " + result)))
  *                   .isError(false)
  *                   .build()))
  *          .build()
@@ -141,8 +141,7 @@ import java.util.function.BiFunction;
  */
 public interface McpServer {
 
-	McpSchema.Implementation DEFAULT_SERVER_INFO = McpSchema.Implementation.builder("Java SDK MCP Server", "0.15.0")
-		.build();
+	McpSchema.Implementation DEFAULT_SERVER_INFO = new McpSchema.Implementation("Java SDK MCP Server", "0.15.0");
 
 	/**
 	 * Starts building a synchronous MCP server that provides blocking operations.
@@ -239,10 +238,8 @@ public interface McpServer {
 			JsonSchemaValidator jsonSchemaValidator = (this.jsonSchemaValidator != null) ? this.jsonSchemaValidator
 					: McpJsonDefaults.getSchemaValidator();
 
-			validateAsyncToolSchemas(jsonSchemaValidator, this.tools);
-
 			return new McpAsyncServer(transportProvider, jsonMapper == null ? McpJsonDefaults.getMapper() : jsonMapper,
-					features, requestTimeout, uriTemplateManagerFactory, jsonSchemaValidator, validateToolInputs);
+					features, requestTimeout, uriTemplateManagerFactory, jsonSchemaValidator);
 		}
 
 	}
@@ -267,11 +264,8 @@ public interface McpServer {
 					this.instructions);
 			JsonSchemaValidator jsonSchemaValidator = this.jsonSchemaValidator != null ? this.jsonSchemaValidator
 					: McpJsonDefaults.getSchemaValidator();
-
-			validateAsyncToolSchemas(jsonSchemaValidator, this.tools);
-
 			return new McpAsyncServer(transportProvider, jsonMapper == null ? McpJsonDefaults.getMapper() : jsonMapper,
-					features, requestTimeout, uriTemplateManagerFactory, jsonSchemaValidator, validateToolInputs);
+					features, requestTimeout, uriTemplateManagerFactory, jsonSchemaValidator);
 		}
 
 	}
@@ -294,8 +288,6 @@ public interface McpServer {
 		String instructions;
 
 		boolean strictToolNameValidation = ToolNameValidator.isStrictByDefault();
-
-		boolean validateToolInputs = true;
 
 		/**
 		 * The Model Context Protocol (MCP) allows servers to expose tools that can be
@@ -397,7 +389,7 @@ public interface McpServer {
 		public AsyncSpecification<S> serverInfo(String name, String version) {
 			Assert.hasText(name, "Name must not be null or empty");
 			Assert.hasText(version, "Version must not be null or empty");
-			this.serverInfo = McpSchema.Implementation.builder(name, version).build();
+			this.serverInfo = new McpSchema.Implementation(name, version);
 			return this;
 		}
 
@@ -422,17 +414,6 @@ public interface McpServer {
 		 */
 		public AsyncSpecification<S> strictToolNameValidation(boolean strict) {
 			this.strictToolNameValidation = strict;
-			return this;
-		}
-
-		/**
-		 * Sets whether to validate tool inputs against the tool's input schema.
-		 * @param validate true to validate inputs and return error on validation failure,
-		 * false to skip validation. Defaults to true.
-		 * @return This builder instance for method chaining
-		 */
-		public AsyncSpecification<S> validateToolInputs(boolean validate) {
-			this.validateToolInputs = validate;
 			return this;
 		}
 
@@ -646,7 +627,7 @@ public interface McpServer {
 		 *
 		 * <p>
 		 * Example usage: <pre>{@code
-		 * .prompts(Collections.singletonMap("analysis", new McpServerFeatures.AsyncPromptSpecification(
+		 * .prompts(Map.of("analysis", new McpServerFeatures.AsyncPromptSpecification(
 		 *     new Prompt("analysis", "Code analysis template"),
 		 *     request -> Mono.fromSupplier(() -> generateAnalysisPrompt(request))
 		 *         .map(GetPromptResult::new)
@@ -830,14 +811,10 @@ public interface McpServer {
 			McpServerFeatures.Async asyncFeatures = McpServerFeatures.Async.fromSync(syncFeatures,
 					this.immediateExecution);
 
-			JsonSchemaValidator jsonSchemaValidator = this.jsonSchemaValidator != null ? this.jsonSchemaValidator
-					: McpJsonDefaults.getSchemaValidator();
-
-			validateSyncToolSchemas(jsonSchemaValidator, this.tools);
-
 			McpAsyncServer asyncServer = new McpAsyncServer(transportProvider,
 					jsonMapper == null ? McpJsonDefaults.getMapper() : jsonMapper, asyncFeatures, requestTimeout,
-					uriTemplateManagerFactory, jsonSchemaValidator, validateToolInputs);
+					uriTemplateManagerFactory,
+					jsonSchemaValidator != null ? jsonSchemaValidator : McpJsonDefaults.getSchemaValidator());
 			return new McpSyncServer(asyncServer, this.immediateExecution);
 		}
 
@@ -866,12 +843,9 @@ public interface McpServer {
 					this.immediateExecution);
 			JsonSchemaValidator jsonSchemaValidator = this.jsonSchemaValidator != null ? this.jsonSchemaValidator
 					: McpJsonDefaults.getSchemaValidator();
-
-			validateSyncToolSchemas(jsonSchemaValidator, this.tools);
-
 			McpAsyncServer asyncServer = new McpAsyncServer(transportProvider,
 					jsonMapper == null ? McpJsonDefaults.getMapper() : jsonMapper, asyncFeatures, this.requestTimeout,
-					this.uriTemplateManagerFactory, jsonSchemaValidator, validateToolInputs);
+					this.uriTemplateManagerFactory, jsonSchemaValidator);
 			return new McpSyncServer(asyncServer, this.immediateExecution);
 		}
 
@@ -893,8 +867,6 @@ public interface McpServer {
 		String instructions;
 
 		boolean strictToolNameValidation = ToolNameValidator.isStrictByDefault();
-
-		boolean validateToolInputs = true;
 
 		/**
 		 * The Model Context Protocol (MCP) allows servers to expose tools that can be
@@ -1000,7 +972,7 @@ public interface McpServer {
 		public SyncSpecification<S> serverInfo(String name, String version) {
 			Assert.hasText(name, "Name must not be null or empty");
 			Assert.hasText(version, "Version must not be null or empty");
-			this.serverInfo = McpSchema.Implementation.builder(name, version).build();
+			this.serverInfo = new McpSchema.Implementation(name, version);
 			return this;
 		}
 
@@ -1025,17 +997,6 @@ public interface McpServer {
 		 */
 		public SyncSpecification<S> strictToolNameValidation(boolean strict) {
 			this.strictToolNameValidation = strict;
-			return this;
-		}
-
-		/**
-		 * Sets whether to validate tool inputs against the tool's input schema.
-		 * @param validate true to validate inputs and return error on validation failure,
-		 * false to skip validation. Defaults to true.
-		 * @return This builder instance for method chaining
-		 */
-		public SyncSpecification<S> validateToolInputs(boolean validate) {
-			this.validateToolInputs = validate;
 			return this;
 		}
 
@@ -1436,8 +1397,6 @@ public interface McpServer {
 
 		boolean strictToolNameValidation = ToolNameValidator.isStrictByDefault();
 
-		boolean validateToolInputs = true;
-
 		/**
 		 * The Model Context Protocol (MCP) allows servers to expose tools that can be
 		 * invoked by language models. Tools enable models to interact with external
@@ -1539,7 +1498,7 @@ public interface McpServer {
 		public StatelessAsyncSpecification serverInfo(String name, String version) {
 			Assert.hasText(name, "Name must not be null or empty");
 			Assert.hasText(version, "Version must not be null or empty");
-			this.serverInfo = McpSchema.Implementation.builder(name, version).build();
+			this.serverInfo = new McpSchema.Implementation(name, version);
 			return this;
 		}
 
@@ -1564,17 +1523,6 @@ public interface McpServer {
 		 */
 		public StatelessAsyncSpecification strictToolNameValidation(boolean strict) {
 			this.strictToolNameValidation = strict;
-			return this;
-		}
-
-		/**
-		 * Sets whether to validate tool inputs against the tool's input schema.
-		 * @param validate true to validate inputs and return error on validation failure,
-		 * false to skip validation. Defaults to true.
-		 * @return This builder instance for method chaining
-		 */
-		public StatelessAsyncSpecification validateToolInputs(boolean validate) {
-			this.validateToolInputs = validate;
 			return this;
 		}
 
@@ -1787,7 +1735,7 @@ public interface McpServer {
 		 *
 		 * <p>
 		 * Example usage: <pre>{@code
-		 * .prompts(Collections.singletonMap("analysis", new McpServerFeatures.AsyncPromptSpecification(
+		 * .prompts(Map.of("analysis", new McpServerFeatures.AsyncPromptSpecification(
 		 *     new Prompt("analysis", "Code analysis template"),
 		 *     request -> Mono.fromSupplier(() -> generateAnalysisPrompt(request))
 		 *         .map(GetPromptResult::new)
@@ -1905,13 +1853,9 @@ public interface McpServer {
 		public McpStatelessAsyncServer build() {
 			McpStatelessServerFeatures.Async features = new McpStatelessServerFeatures.Async(this.serverInfo, this.serverCapabilities, this.tools,
 					this.resources, this.resourceTemplates, this.prompts, this.completions, this.instructions);
-			JsonSchemaValidator jsonSchemaValidator = this.jsonSchemaValidator != null ? this.jsonSchemaValidator
-					: McpJsonDefaults.getSchemaValidator();
-
-			validateStatelessAsyncToolSchemas(jsonSchemaValidator, this.tools);
-
 			return new McpStatelessAsyncServer(transport, jsonMapper == null ? McpJsonDefaults.getMapper() : jsonMapper,
-					features, requestTimeout, uriTemplateManagerFactory, jsonSchemaValidator, validateToolInputs);
+					features, requestTimeout, uriTemplateManagerFactory,
+					jsonSchemaValidator != null ? jsonSchemaValidator : McpJsonDefaults.getSchemaValidator());
 		}
 
 	}
@@ -1935,8 +1879,6 @@ public interface McpServer {
 		String instructions;
 
 		boolean strictToolNameValidation = ToolNameValidator.isStrictByDefault();
-
-		boolean validateToolInputs = true;
 
 		/**
 		 * The Model Context Protocol (MCP) allows servers to expose tools that can be
@@ -2039,7 +1981,7 @@ public interface McpServer {
 		public StatelessSyncSpecification serverInfo(String name, String version) {
 			Assert.hasText(name, "Name must not be null or empty");
 			Assert.hasText(version, "Version must not be null or empty");
-			this.serverInfo = McpSchema.Implementation.builder(name, version).build();
+			this.serverInfo = new McpSchema.Implementation(name, version);
 			return this;
 		}
 
@@ -2064,17 +2006,6 @@ public interface McpServer {
 		 */
 		public StatelessSyncSpecification strictToolNameValidation(boolean strict) {
 			this.strictToolNameValidation = strict;
-			return this;
-		}
-
-		/**
-		 * Sets whether to validate tool inputs against the tool's input schema.
-		 * @param validate true to validate inputs and return error on validation failure,
-		 * false to skip validation. Defaults to true.
-		 * @return This builder instance for method chaining
-		 */
-		public StatelessSyncSpecification validateToolInputs(boolean validate) {
-			this.validateToolInputs = validate;
 			return this;
 		}
 
@@ -2287,7 +2218,7 @@ public interface McpServer {
 		 *
 		 * <p>
 		 * Example usage: <pre>{@code
-		 * .prompts(Collections.singletonMap("analysis", new McpServerFeatures.SyncPromptSpecification(
+		 * .prompts(Map.of("analysis", new McpServerFeatures.SyncPromptSpecification(
 		 *     new Prompt("analysis", "Code analysis template"),
 		 *     request -> Mono.fromSupplier(() -> generateAnalysisPrompt(request))
 		 *         .map(GetPromptResult::new)
@@ -2422,42 +2353,13 @@ public interface McpServer {
 			McpStatelessServerFeatures.Sync syncFeatures = new McpStatelessServerFeatures.Sync(this.serverInfo, this.serverCapabilities, this.tools,
 					this.resources, this.resourceTemplates, this.prompts, this.completions, this.instructions);
 			McpStatelessServerFeatures.Async asyncFeatures = McpStatelessServerFeatures.Async.fromSync(syncFeatures, this.immediateExecution);
-			JsonSchemaValidator jsonSchemaValidator = this.jsonSchemaValidator != null ? this.jsonSchemaValidator
-					: McpJsonDefaults.getSchemaValidator();
-
-			validateStatelessSyncToolSchemas(jsonSchemaValidator, this.tools);
-
 			McpStatelessAsyncServer asyncServer = new McpStatelessAsyncServer(transport,
 					jsonMapper == null ? McpJsonDefaults.getMapper() : jsonMapper, asyncFeatures, requestTimeout,
-					uriTemplateManagerFactory, jsonSchemaValidator, validateToolInputs);
+					uriTemplateManagerFactory,
+					this.jsonSchemaValidator != null ? this.jsonSchemaValidator : McpJsonDefaults.getSchemaValidator());
 			return new McpStatelessSyncServer(asyncServer, this.immediateExecution);
 		}
 
-	}
-
-	public static void validateAsyncToolSchemas(JsonSchemaValidator validator,
-			List<McpServerFeatures.AsyncToolSpecification> tools) {
-		tools.forEach(spec -> validateToolSchema(validator, spec.tool()));
-	}
-
-	public static void validateSyncToolSchemas(JsonSchemaValidator validator,
-			List<McpServerFeatures.SyncToolSpecification> tools) {
-		tools.forEach(spec -> validateToolSchema(validator, spec.tool()));
-	}
-
-	public static void validateStatelessAsyncToolSchemas(JsonSchemaValidator validator,
-			List<McpStatelessServerFeatures.AsyncToolSpecification> tools) {
-		tools.forEach(spec -> validateToolSchema(validator, spec.tool()));
-	}
-
-	public static void validateStatelessSyncToolSchemas(JsonSchemaValidator validator,
-			List<McpStatelessServerFeatures.SyncToolSpecification> tools) {
-		tools.forEach(spec -> validateToolSchema(validator, spec.tool()));
-	}
-
-	public static void validateToolSchema(JsonSchemaValidator validator, McpSchema.Tool tool) {
-		validator.assertConforms("Tool '" + tool.name() + "' inputSchema", tool.inputSchema());
-		validator.assertConforms("Tool '" + tool.name() + "' outputSchema", tool.outputSchema());
 	}
 
 }
